update file structure

--- a/index.html
+++ b/index.html
@@ -2,13 +2,15 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="./public/ness.png" /> 
-    <link rel="stylesheet" type="text/css" href="./css/style.css" />
+    <link rel="icon" href="./public/favicon.png" /> 
+    <link rel="stylesheet" type="text/css" href="./src/styles/main.css" /> 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+    <title>Restaurant Page</title>
   </head> 
   <body>
 
-    <script src="/index.js"></script>
+    <h1>hello!</h1> 
+
+    <script type="module" src="./src/index.js"></script> 
   </body>
 </html>
