--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
     <link rel="icon" href="./public/favicon.png" /> 
     <link rel="stylesheet" type="text/css" href="./src/styles/main.css" /> 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Restaurant Page</title>
+    <title>Restaurant Page</title> 
   </head> 
   <body>
 
-    <h1>hello!</h1> 
+    <div id="content"></div>
+    
 
     <script type="module" src="./src/index.js"></script> 
   </body>
