add header and footer

--- a/index.html
+++ b/index.html
@@ -5,13 +5,32 @@
     <link rel="icon" href="./public/favicon.png" /> 
     <link rel="stylesheet" type="text/css" href="./src/styles/main.css" /> 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Restaurant Page</title> 
+    <script type="module" src="./src/index.js"></script> 
+    <title>Earthbound Page</title> 
   </head> 
   <body>
 
-    <div id="content"></div>
-    
+    <header id="header">
+      <h1 class="title">Earthbound Page</h1>
 
-    <script type="module" src="./src/index.js"></script> 
+      <nav>
+        <ul class="tab-list">
+          <li>Home</li> 
+          <li>Enemies</li>
+          <li>Items</li> 
+        </ul>
+      </nav>
+
+    </header>
+
+    <main class="main" id="main">
+
+
+    </main> 
+
+    <footer id="footer">
+      <p>made by krs00 :)</p>
+    </footer>
+
   </body>
 </html>
