--- a/index.html
+++ b/index.html
@@ -6,18 +6,18 @@
     <link rel="stylesheet" type="text/css" href="./src/styles/main.css" /> 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script type="module" src="./src/index.js"></script> 
-    <title>Earthbound Page</title> 
+    <title>EarthBound Page</title> 
   </head> 
   <body>
 
     <header id="header">
-      <h1 class="title">Earthbound Page</h1>
+      <h1 class="title">EarthBound Page</h1>
 
       <nav>
         <ul class="tab-list">
           <li>Home</li> 
-          <li>Enemies</li>
-          <li>Items</li> 
+          <li>Heros</li>
+          <li>Villians</li> 
         </ul>
       </nav>
 
