add menu btn class

--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 
       <nav>
         <ul class="tab-list">
-          <li>Home</li> 
-          <li>Heros</li>
-          <li>Villians</li> 
+          <li class="menu-btn" id="home">Home</li>  
+          <li class="menu-btn" id="heroes">Heros</li>
+          <li class="menu-btn" id="villians">Villians</li>
         </ul>
       </nav>
 
